<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context="br.com.fiap.a2tina_android_ex05_navigationdrawerfragments.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="80dp"
        android:text="@string/myapp"
        android:id="@+id/myapp"
        android:textAlignment="center"
        android:textColor="#fff"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meunome"
        android:textColor="#fff"
        android:paddingTop="@dimen/espacename"
        android:textAlignment="center"
        android:textSize="@dimen/fontname"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meurm"
        android:textColor="#fff"
       
        android:textAlignment="center"
        android:textSize="@dimen/fontname"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/gif"/>
    </RelativeLayout>


</LinearLayout>
